src/main/java/com/example/board/error/exception/UnAuthorizedException.java
package com.example.board.error.exception;

import com.example.board.error.ErrorCode;

public class UnAuthorizedException extends BusinessException {

    public UnAuthorizedException(String message, ErrorCode errorCode) {
        super(message, errorCode);
    }
}
